<resources>
    <string name="app_name">inventory</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Pets</string>
    <string name="editor_activity_title_new_pet">Add a Pet</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_mail">Supplier Email</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="product_image">Product Image</string>
    <string name="category_measurement">Measurement</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">price</string>
    <string name="hint_product_quantity">quantity</string>
    <string name="hint_supplier_name">supplier name</string>
    <string name="hint_supplier_mail">mail</string>
    <string name="hint_supplier_phone">supplier phone</string>
    <string name="editor_insert_pet_successful">Pet saved</string>
    <string name="editor_insert_pet_failed">Error with saving pet</string>
    <string name="default_message">please click left Button to add new product or center Button to dummy product</string>
    <string name="select_image_button">Select Image</string>
</resources>
