<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.example.shaimaaderbaz.inventory.activities.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/product_name"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"/>

    </LinearLayout>
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/product_price"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/edit_price"
            android:hint="@string/hint_product_price"
            android:inputType="textCapWords"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/product_quantity"/>
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
             <Button
                 android:id="@+id/decrease_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="-"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/edit_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="textCapWords"/>
             <Button
                 android:id="@+id/increase_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="+"/>
</LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/supplier_name"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/edit_supplier_name"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/supplier_mail"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/edit_supplier_mail"
            android:hint="@string/hint_supplier_mail"
            android:inputType="textCapWords"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/supplier_phone"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/edit_supplier_phone"
            android:hint="@string/hint_supplier_phone"
            android:inputType="textCapWords"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/select_image_button"
            android:text="@string/select_image_button"
            android:inputType="textCapWords"/>
        <ImageView
            android:id="@+id/image_product"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabDetailsOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_arrow_add"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabDetailsUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_done"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabDetailsDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_delete_all"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabContatctSupplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_contact_sub"/>
    </LinearLayout>
</LinearLayout>

